--- a/report/report.bib
+++ b/report/report.bib
@@ -4,3 +4,15 @@
   year = {2013},
   publisher = {Springer}
 }
+
+@article{clopper1934,
+  title = {The use of confidence or fiducial limits illustrated in the case of the binomial},
+  author = {Clopper, Charles J and Pearson, Egon S},
+  journal = {Biometrika},
+  volume = {26},
+  number = {4},
+  pages = {404--413},
+  year = {1934},
+  publisher = {JSTOR},
+  doi = {10.2307/2331986}
+}
