--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -13,7 +13,8 @@ urlcolor: blue
 library(knitr)
 opts_chunk$set(echo = TRUE, message = FALSE, comment = "#>")
 library(tidyverse)
-read_chunk("report.R")
+read_chunk("../R/report.R")
+read_chunk("../R/shared.R")
 ```
 
 # Introduction
