--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -13,8 +13,7 @@ urlcolor: blue
 library(knitr)
 opts_chunk$set(echo = TRUE, message = FALSE, comment = "#>")
 library(tidyverse)
-read_chunk("../R/report.R")
-read_chunk("../R/shared.R")
+read_chunk("../R/main.R")
 ```
 
 # Introduction
@@ -49,7 +48,7 @@ The common parametric approach is to assume the $\log$ salary follows a $\text{N
 The convention is to estimate $\sigma^2$ with unbiased sample variance, $\hat{\sigma}_{\text{unbiased}}^2$. As such, the central $(1 - \alpha)$ confidence interval of prediction is given by
 \vspace{0em}
 \begin{align*}
-  G_\alpha = \left[\bar{Y} + \Phi\left(\frac{\alpha}{2}\right)\frac{1}{n - 1}\lVert\mathbf{Y} - \bar{Y}\mathbf{1}\rVert^2, \bar{Y} + \Phi\left(1 - \frac{\alpha}{2}\right)\frac{1}{n - 1}\lVert\mathbf{Y} - \bar{Y}\mathbf{1}\rVert^2\right]
+  G_\alpha = \left[\bar{Y} + \phi\left(\frac{\alpha}{2}\right)\frac{1}{n - 1}\lVert\mathbf{Y} - \bar{Y}\mathbf{1}\rVert^2, \bar{Y} + \phi\left(1 - \frac{\alpha}{2}\right)\frac{1}{n - 1}\lVert\mathbf{Y} - \bar{Y}\mathbf{1}\rVert^2\right]
 \end{align*}
 
 If the assumption holds, $\overline{\mathbf{1}(Y_{n + 1} \in G_\alpha)} \rightarrow 1 - \alpha$ in probability as $n \rightarrow \infty$.
@@ -62,7 +61,7 @@ Instead of assuming $f$ is a Gaussian density, which is not necessarily true, we
   \hat{f}: \mathbb{R} \rightarrow [0, \infty), x \mapsto \hat{f}(x) \triangleq \frac{1}{nh} \sum_{i = 1}^n K\left(\frac{x - Y_i}{h}\right)
 \end{align*}
 
-for some $h > 0$, with $K \triangleq \Phi$ being the Gaussian kernel. A $(1 - \alpha)$ confidence interval is thus obtainable.
+for some $h > 0$, with $K \triangleq \phi$ being the Gaussian kernel. A $(1 - \alpha)$ confidence interval is thus obtainable.
 
 The bandwidth $h$ is selected by (1) the rule-of-thumb method: $\hat{h} = 1.06n^{-0.2}\min\{\hat{\sigma}_{\text{unbiased}}, \text{IQR}/1.34\}$, and (2) cross-validation: $\hat{h} = \arg\min_{h > 0} \text{LSCV}(h)$.
 
