--- a/slide/slide.Rmd
+++ b/slide/slide.Rmd
@@ -115,11 +115,11 @@ $$H_0: p = 0.5; H_1: p \neq 0.5$$
 
 $$m(x) = \beta_0 + \beta_1x$$
 
-- Local linear regression (a nonparametric approach): $p = 1$ as we are estimating the zero derivative; by LSCV.
+- Local linear regression (a nonparametric approach): $p = 1$ as we are estimating the zero derivative; by LSCV:
 
 $$m(x) \approx m(x_0) + m'(x_0)(x - x_0)$$
 
-- Penalised cubic spline regression (a nonparametric approach): with $L = \min\{200 / 4, 35\} = 35$; by GCV.
+- Penalised cubic spline regression (a nonparametric approach): with $L = \min\{200 / 4, 35\} = 35$; by GCV:
 
 $$m(x) = s(x)$$
 
@@ -143,6 +143,39 @@ $$m(x) = s(x)$$
 ```{r bivar-repeat-eval, include = FALSE, cache = TRUE}
 ```
 ```{r bivar-repeat-eval-plot, echo = FALSE, dpi = 400, fig.height = 3.2}
+```
+
+---
+
+## Multivariate regression
+
+- Suppose we also observe the **years** played in major league $X_2$.
+
+- Thus we wish to estimate $m(\mathbf{x}) = \mathbb{E}(Y | \mathbf{X} = \mathbf{x})$.
+
+- For a new $(\mathbf{X}_{n + 1}, Y_{n + 1})$, $\hat{m}(\mathbf{X}_{n + 1})$ is the predictor for $Y_{n + 1}$.
+
+- Assume Normality - linear regression (a parametric approach); by OLS:
+
+$$m(\mathbf{x}) = \mathbf{x}^\top\boldsymbol\beta$$
+
+- Single index model (a semiparametric approach) via penalised spline:
+
+$$m(\mathbf{x}) = s(\mathbf{x}^\top\boldsymbol\beta)$$
+
+- Partial linear model (a semiparametric approach) with linear $X_1$:
+
+$$m(\mathbf{x}) = \beta_0 + \beta_1 x_1 + s(x_2)$$
+
+- Additive model (a semiparametric approach):
+
+$$m(\mathbf{x}) = \beta_0 + s_1(x_1) + s_2(x_2)$$
+
+---
+
+## Multivariate regression: evaluation
+
+```{r multivar-repeat-eval, echo = FALSE, dpi = 400, fig.height = 3.8}
 ```
 
 ---
@@ -182,3 +215,5 @@ rmarkdown::render("slide/slide.Rmd")
 - Clopper, C. J., & Pearson, E. S. (1934). The use of confidence or fiducial limits illustrated in the case of the binomial. *Biometrika*, *26*(4), 404-413. [https://doi.org/10.2307/2331986](https://doi.org/10.2307/2331986)
 
 - James, G., Witten, D., Hastie, T., Tibshirani, R., et al. (2013). *An introduction to statistical learning*. Springer.
+
+- Wood, S. N. (2011). Fast stable restricted maximum likelihood and marginal likelihood estimation of semiparametric generalized linear models. *Journal of the Royal Statistical Society (B)*, *73*(1), 3-36. [https://doi.org/10.1111/j.1467-9868.2010.00749.x](https://doi.org/10.1111/j.1467-9868.2010.00749.x)
