--- a/report/report.bib
+++ b/report/report.bib
@@ -16,3 +16,27 @@
   publisher = {JSTOR},
   doi = {10.2307/2331986}
 }
+
+@article{ruppert2002,
+  title = {Selecting the number of knots for penalized splines},
+  author = {Ruppert, David},
+  journal = {Journal of computational and graphical statistics},
+  volume = {11},
+  number = {4},
+  pages = {735--757},
+  year = {2002},
+  publisher = {Taylor \& Francis},
+  doi = {10.1198/106186002853}
+}
+
+@article{wood2011,
+  title = {Fast stable restricted maximum likelihood and marginal 
+likelihood estimation of semiparametric generalized linear models},
+  journal = {Journal of the Royal Statistical Society (B)},
+  volume = {73},
+  number = {1},
+  pages = {3-36},
+  year = {2011},
+  author = {S. N. Wood},
+  doi = {10.1111/j.1467-9868.2010.00749.x}
+}
